syntax = "proto3";

package goods;

service Goods {
    // 获取商品列表
    rpc List(Request) returns (Response) {}
    // 根据 唯一 获取商品信息 
    rpc Get(Request) returns (Response) {}
    // 创建商品
    rpc Create(Request) returns (Response) {}
    // 更新商品
    rpc Update(Request) returns (Response) {}
    // 删除商品
    rpc Delete(Request) returns (Response) {}
    // 微服务之间调用
}
// 数据库 barcodes
message Barcode {
    int64 id = 1;               // 商品条码()
    string goods_id = 2;        // 商品UUID
    string stock_id = 3;        // 库存自动UUID(多条码可以使用一个库存[禁止不同价格使用同一库存UUID])
    int64 price = 4;            // 价格
    int64 width = 5;            // 宽(毫米)
    int64 height = 6;           // 高(毫米)
    int64 depth = 7;            // 深(毫米)
    string unit = 8;            // 单位(件、个、斤...)
    string spec = 9;            // 规格(口味)
    int64 grossweight = 10;     // 总重(克)
    int64 netweight = 11;       // 净重(克)
    string img = 12;            // 主图
    string barcode_img = 13;    // 条码图
    string created_at = 14;
    string updated_at = 15;
}
// 数据库 goods
message Good {
    string id = 1;              // 商品ID(UUID)
    string name = 2;            // 商品名称
    string eng_name = 3;        // 英文名称
    string desc = 4;            // 商品描述
    int64 status = 5;           // 商品状态(下架-1、上架1、线上2、外卖3)
    int64 brand_id = 6;         // 品牌ID
    int64 category_id = 7;      // 商品分类ID
    int64 department_id = 8;    // 商品分类ID
    int64 firm_id = 9;          // 所属公司ID
    int64 unspsc_id = 10;       // 商品及服务编码
    int64 taxcode_id = 11;      // 税收分类编码
    int64 cess = 12;            // 税率
    string created_at = 13;
    string updated_at = 14;
}

// 商品信息 抽象对象不对应数据库(有用查询数据返回)
message GoodsInfo {
    Good good = 1;                      // 商品主信息
    repeated Barcode barcode = 2;       // 条码商品详情
}

message ListQuery{
    int64 limit=1;          //返回数量
    int64 page=2;           //页面
    string sort=3;          //排序
}

message Request {
    ListQuery list_query = 1;   // 列表分页请求
    Good good = 2;              // 商品主信息
    Barcode barcode = 3;        // 条码商品详情
}

message Response {
    GoodsInfo goods_info = 1;           // 商品详细信息
    repeated GoodsInfo goods_infos = 2; // 商品详细信息
    bool valid = 3;                     // 操作状态返回
}